--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,26 @@
 
 # connection configuration properties
-conn.user=admin
-conn.password=
+xml.user=admin
+xml.password=
 
-conn.host=localhost
-conn.port=8080
-conn.connectionUri = xmldb:exist://%1$s:%2$s/exist/xmlrpc
+xml.host=localhost
+xml.port=8080
+xml.connectionUri = xmldb:exist://%1$s:%2$s/exist/xmlrpc
 # driver class
-conn.driver=org.exist.xmldb.DatabaseImpl
+xml.driver=org.exist.xmldb.DatabaseImpl
+
+
+rdf.endpoint=http://localhost:8080/fuseki
+
+# dataset is the unit that is queried by a SPARQL query
+# it consists of a default graph, and a number of named graphs
+rdf.dataset=XMLProject
+
+# SPARQL query endpoint
+rdf.query=query
+
+# SPARQL update endpoint
+rdf.update=update
+
+# graph store protocol
+rdf.data=data
