--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ xml.connectionUri = xmldb:exist://%1$s:%2$s/exist/xmlrpc
 # driver class
 xml.driver=org.exist.xmldb.DatabaseImpl
 
+server.port=8081
 
 rdf.endpoint=http://localhost:8080/fuseki
 
@@ -24,3 +25,12 @@ rdf.update=update
 
 # graph store protocol
 rdf.data=data
+
+spring.datasource.url=jdbc:mysql://localhost:3306/xml_users?allowPublicKeyRetrieval=true&useSSL=FALSE
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+
+spring.jpa.generate-ddl = true
+spring.jpa.hibernate.ddl-auto = update
