--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,3 +34,14 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialec
 
 spring.jpa.generate-ddl = true
 spring.jpa.hibernate.ddl-auto = update
+
+# Mail
+spring.mail.default-encoding=UTF-8
+spring.mail.host=smtp.gmail.com
+spring.mail.username = tim10.xml@gmail.com
+spring.mail.password = tim10pass
+spring.mail.port=587
+spring.mail.protocol=smtp
+spring.mail.test-connection=false
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
