--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,9 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@types/jquery": "^3.3.31",
+    "angular-xml-editor": "0.0.8",
+    "jquery": "^3.4.1",
     "jwt-decode": "^2.2.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
